.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Service_Type_Version_Question__c.object
<CustomObject>
    <description>Junction object that supports many-to-many relationship between Service Type Version and Question</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Citizen_Web_Intake__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should this question be displayed generally?</description>
        <label>Allow Citizen Web Intake</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Data_Type__c</fullName>
        <formula>TEXT(Incap311__Question__r.Incap311__Data_Type__c)</formula>
        <label>Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Answer__c</fullName>
        <label>Default Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Flex_Question_Code__c</fullName>
        <formula>Incap311__Question__r.Incap311__Flex_Question_Code__c</formula>
        <label>Flex Question Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Force_Upper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Upper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Hint_Text__c</fullName>
        <formula>Incap311__Question__r.Incap311__Hint_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hint Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Controlling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Controlling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Required_Question__c</fullName>
        <formula>IF(
   OR( Incap311__Question__r.Incap311__Required__c,
       Incap311__Is_Required__c
   ),
   TRUE,
   FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Required (Question Level)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <formula>IF(
 ISNULL( Incap311__Override_Order__c ),
 Incap311__Question__r.Incap311__Order__c,
 Incap311__Override_Order__c
)</formula>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Answer_Values__c</fullName>
        <description>Possible answers for a question, represented as JSON. This is used to override default answers.</description>
        <label>Override Answer Values</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Order__c</fullName>
        <label>Override Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Start_Date__c</fullName>
        <label>Override Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Stop_Date__c</fullName>
        <label>Override Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Text__c</fullName>
        <formula>Incap311__Question__r.Incap311__Question_Alias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question__c</fullName>
        <label>Question</label>
        <referenceTo>Incap311__Question__c</referenceTo>
        <relationshipName>Service_Type_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__SR_Junction_Count__c</fullName>
        <formula>Incap311__Question__r.Incap311__SR_Junction_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Junction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Name__c</fullName>
        <formula>Incap311__Service_Type_Version__r.Incap311__Service_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version__c</fullName>
        <label>Service Type Version Id</label>
        <referenceTo>Incap311__Service_Type_Version__c</referenceTo>
        <relationshipLabel>Service Type Version Questions</relationshipLabel>
        <relationshipName>Service_Type_Version_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type__c</fullName>
        <formula>Incap311__Service_Type_Version__r.Incap311__Service_Type__r.Incap311__Service_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Start_Date__c</fullName>
        <formula>IF(
 ISNULL( Incap311__Override_Start_Date__c ),
 Incap311__Question__r.Incap311__Start_Date__c,
 Incap311__Override_Start_Date__c 
)</formula>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Stop_Date__c</fullName>
        <formula>IF(
  ISNULL(Incap311__Override_Stop_Date__c),
  Incap311__Question__r.Incap311__Stop_Date__c,
  Incap311__Override_Stop_Date__c
)</formula>
        <label>Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Used_By_Interface_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used By Interface Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Validations__c</fullName>
        <label>Validations</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service Type Version Question</label>
    <nameField>
        <displayFormat>STQ-{00000000}</displayFormat>
        <label>Service Type Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Type Version Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>